<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ppt_background">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nick"
                android:layout_width="194dp"
                android:layout_height="43dp"
                android:layout_marginBottom="132dp"
                android:ems="10"
                android:fontFamily="@font/splatoon"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.447"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginTop="102dp"
                android:layout_marginBottom="98dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ppt_banner" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="61dp"
                android:backgroundTint="#E91E63"
                android:fontFamily="@font/splatoon"
                android:onClick="btn_exit_onClick"
                android:text="@string/btn_exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:backgroundTint="#E91E63"
                android:fontFamily="@font/splatoon"
                android:onClick="btn_start_onClick"
                android:text="@string/btn_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/splatoon"
                android:text="@string/tv_nick"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_nick"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_ppt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/splatoon"
                android:text="@string/tv_ppt"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="#E91E63"
                android:fontFamily="@font/splatoon"
                android:onClick="btn_confirm_onClick"
                android:text="@string/btn_confirm"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_nick"
                app:layout_constraintStart_toEndOf="@+id/et_nick" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>